fonctionnalité read des recettes sur côté client et backoffice

--- a/www/routes.yml
+++ b/www/routes.yml
@@ -31,5 +31,9 @@ admin/users:
   action: manageUsers
 
 admin/recipes:
-  controller: Backoffice
+  controller: Backoffice  
   action: manageRecipes
+
+recipes:
+  controller: Front
+  action: displayRecipes
