ajout fonction deleteRecipe

--- a/www/routes.yml
+++ b/www/routes.yml
@@ -34,6 +34,10 @@ admin/recipes:
   controller: Backoffice  
   action: manageRecipes
 
+admin/deleteRecipes:
+controller: Backoffice  
+action: deleteRecipes
+
 recipes:
   controller: Front
   action: displayRecipes
