ajout de la fonctionnalité delete

--- a/www/routes.yml
+++ b/www/routes.yml
@@ -34,9 +34,9 @@ admin/recipes:
   controller: Backoffice  
   action: manageRecipes
 
-admin/deleteRecipe?recipeId={id}:
-controller: Backoffice  
-action: deleteRecipes
+admin/deleterecipe:
+  controller: Backoffice  
+  action: deleteRecipe
 
 recipes:
   controller: Front
