--- a/www/routes.yml
+++ b/www/routes.yml
@@ -14,6 +14,10 @@ s-inscrire:
   controller: "Security"
   action: "register"
 
+s-inscrire2:
+  controller: "Security"
+  action: "register2"
+
 login:
   controller: "Security"
   action: "login"
