fix double sign in form after inscription. Fix view after clicking email's confirmation link

--- a/www/routes.yml
+++ b/www/routes.yml
@@ -18,6 +18,10 @@ email-confirmation:
   controller: "Security"
   action: "confirmEmail"
 
+email-waiting-validation:
+  controller: "Front"
+  action: "emailWaitingValidation"
+
 login:
   controller: "Security"
   action: "login"
