--- a/www/routes.yml
+++ b/www/routes.yml
@@ -14,6 +14,10 @@ terms_sales:
   controller: "Front"
   action: "termSales"
 
+design_guide:
+  controller: "Front"
+  action: "designGuide"
+
 connexion:
   controller: "Security"
   action: "login"
