--- a/www/routes.yml
+++ b/www/routes.yml
@@ -143,6 +143,10 @@ admin/deletemedia:
   controller: Backoffice
   action: deleteMedia
 
+reservation:
+  controller : "Front"
+  action : "reservation"
+
 admin/reservations:
   controller: Backoffice
   action: manageReservations
